# TJU-NEMU2025

./: .gitignore  Makefile  README.md  entry
.github/workflows/: ci.yml
config/: Makefile.git
doc/: 2026-01-nemu-fixes.md  learn.md
game/: Makefile.part
game/src/nemu-pal/game/: script.c
game/src/nemu-pal/include/: ui.h
kernel/: Makefile.part
kernel/include/: common.h  irq.h  memory.h
kernel/src/elf/: elf.c
kernel/src/irq/: irq_handle.c
kernel/src/memory/: mm.c
kernel/src/syscall/: do_syscall.c
lib-common/FLOAT/: CMakeLists.txt
lib-common/uclibc/include/asm/: ioctls.h
nemu/: Makefile  Makefile.part
nemu/include/: common.h
nemu/include/cpu/: reg.h
nemu/include/memory/: cache.h  memory.h  tlb.h
nemu/src/cpu/: reg.c
nemu/src/cpu/exec/: all-instr.h  exec.c
nemu/src/cpu/exec/control/: jb-template.h  jb.h  jcc.h  jmp-template.h  jnb-template.h  jnb.c  jnb.h  jno-template.h  jno.h  jnp-template.h  jnp.h  jo-template.h  jo.h  jp-template.h  jp.h
nemu/src/cpu/exec/data-mov/: cmov-template.h  cmov.c  cmov.h  cmovne-template.h  cmovns-template.h  lidt-template.h  mov-template.h
nemu/src/cpu/exec/logic/: seta-template.h
nemu/src/cpu/exec/misc/: misc.c  misc.h
nemu/src/device/: device.c  sdl.c  vga-palette.c  vga.c  vga.h
nemu/src/memory/: cache.c  dram.c  memory.c  tlb.c
nemu/src/monitor/: monitor.c
testcase/: Makefile  Makefile.part
